--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <application
@@ -32,8 +33,9 @@
         <activity
             android:name=".login.LoginActivity"
             android:label="@string/loginLabel" />
-        <activity android:name=".forgot.ForgotActivity"
-            android:label="@string/forgot_password"></activity>
+        <activity
+            android:name=".forgot.ForgotActivity"
+            android:label="@string/forgot_password" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -42,8 +44,23 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
+
+        <activity
+            android:name=".user.UserHomeActivity"
+            android:label="@string/title_activity_user_home"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".manager.AdminActivity"
+            android:label="@string/title_activity_admin"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".todo.create_todo.CreateTodoActivity"
+            android:parentActivityName=".manager.AdminActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".manager.AdminActivity" />
+        </activity>
     </application>
 
 </manifest>
