--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ android {
     }
 }
 
+ext {
+    picassoVersion = '2.5.2'
+    circleImageViewVersion = '2.1.0'
+    shapeImageViewVersion = '0.9.3'
+    circleindicatorVersion = '1.2.2@aar'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -51,11 +58,24 @@ dependencies {
 
     compile 'com.github.clans:fab:1.6.4'
 
+//  chat library
+    compile 'com.github.stfalcon:chatkit:0.2.2'
+
+    //Picasso
+    compile "com.squareup.picasso:picasso:$picassoVersion"
+
+    //ImageViews
+    compile "de.hdodenhof:circleimageview:$circleImageViewVersion"
+    compile "com.github.siyamed:android-shape-imageview:$shapeImageViewVersion"
+
 
 
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
+
 
 
 
