user home bottom navigation added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,24 +47,11 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity
-            android:name=".user.UserHomeActivity"
-            android:label="@string/title_activity_user_home"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".manager.AdminActivity"
-            android:label="@string/title_activity_admin"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".todo.create_todo.CreateTodoActivity"
-            android:parentActivityName=".manager.AdminActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".manager.AdminActivity" />
-        </activity>
+        <activity android:name=".todo.create_todo.CreateTodoActivity"></activity>
         <activity android:name=".chat.ChatListActivity" />
         <activity android:name=".chat.message.MessageActivity" />
-        <activity android:name=".chat.message.BaseMessageActivity"></activity>
+        <activity android:name=".chat.message.BaseMessageActivity" />
+        <activity android:name=".user.UserHomeActivity" />
     </application>
 
 </manifest>
