--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -43,6 +44,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
     compile 'com.android.support:design:26.1.0'
 
 
@@ -69,10 +71,21 @@ dependencies {
     compile "com.github.siyamed:android-shape-imageview:$shapeImageViewVersion"
 
 
+//    chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+
 
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
+
+
+
+
+
 
 
 
