--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
 
 
@@ -70,15 +71,15 @@ dependencies {
     compile "de.hdodenhof:circleimageview:$circleImageViewVersion"
     compile "com.github.siyamed:android-shape-imageview:$shapeImageViewVersion"
 
-
 //    chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
 
 
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
 
 
 
