--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.nice.nice">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
 
     <application
+        android:name=".NiceApp"
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
@@ -27,15 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".register.RegisterActivity"
-            android:label="@string/register_lebel" />
-        <activity
-            android:name=".login.LoginActivity"
-            android:label="@string/loginLabel" />
-        <activity
-            android:name=".forgot.ForgotActivity"
-            android:label="@string/forgot_password" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -47,11 +44,14 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".todo.create_todo.CreateTodoActivity"></activity>
+        <activity android:name=".todo.create_todo.CreateTodoActivity" />
         <activity android:name=".chat.ChatListActivity" />
         <activity android:name=".chat.message.MessageActivity" />
         <activity android:name=".chat.message.BaseMessageActivity" />
         <activity android:name=".user.UserHomeActivity" />
+        <activity android:name=".attendance.MarkAttendanceActivity" />
+        <activity android:name=".report.CreateReportActivity" />
+        <activity android:name=".register.RegisterActivity"></activity>
     </application>
 
 </manifest>
