--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,17 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     repositories {
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:3.2.0' // google-services plugin
+        classpath 'io.fabric.tools:gradle:1.25.1'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -24,6 +28,9 @@ allprojects {
         maven {
             url "https://maven.google.com" // Google's Maven repository
             }
+        maven {
+            url 'https://maven.google.com/'
+        }
 
         maven { url "https://jitpack.io" }
     }
